<resources>
    <string name="app_name">Submission Intermediate</string>
    <string name="txt_invalid_email">Email not valid</string>
    <string name="password_not_valid">Password must be at least 6 characters long</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back_login_with_your_data_that_your_entered_during_registration">Welcome back! login with your data that your entered during registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="txt_dicoding_story">Dicoding Story</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="text_privacy_policy">Creating an account means you\'re okay with our Term of Service and our Privacy Policy.</string>
    <string name="contentDescIV">photo_desc</string>
    <string name="txt_title">Title</string>
    <string name="txt_description">Description</string>
    <string name="txt_add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="txt_info">Information</string>
    <string name="txt_image_description">Image description</string>
    <string name="close">Close</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_gallery">Gallery</string>
    <string name="appwidget_text">Dicoding Story</string>
    <string name="empty_text">Empty</string>
    <string name="welcome">Welcome</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="err_email_or_password">Email or password is incorrect</string>
    <string name="register_success">Register Successfully</string>
    <string name="registered_as">Registered as</string>
    <string name="please_log">Please login with your data</string>
    <string name="upload_story">Upload Story</string>
    <string name="upload_success">Upload Success</string>
    <string name="please_insert_img_desc">Please insert image and description</string>
    <string name="language">Language</string>
    <string name="email_already">Email already taken</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="menu_maps">Maps</string>
    <string name="const_text_seconds_ago">second ago</string>
    <string name="const_text_minutes_ago">minutes ago</string>
    <string name="const_text_hours_ago">hours ago</string>
    <string name="const_text_days_ago">days ago</string>
    <string name="upload_on">2 minutes ago</string>
    <string name="const_text_try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="content_description_icon_maps">icon maps</string>
    <string name="const_text_adapter_maps_default">Default View (Country)</string>
    <string name="const_text_adapter_maps_province">Around My Province</string>
    <string name="const_text_adapter_maps_city">Around My City</string>
    <string name="const_text_adapter_maps_district">Around My District</string>
    <string name="const_text_adapter_maps_around">Around My Location</string>
    <string name="purwakarta_indonesia">Purwakarta, Indonesia</string>
    <string name="const_lorem_ipsum">Can\'t Access Permission</string>
    <string name="button_text_ok">OK</string>
    <string name="UI_validation_permission_location">Please give the app access to read your location.</string>
    <string name="click_to_detail">(Click to detail story)</string>
    <string name="add_location">📌 Add Location</string>
    <string name="get_location_data">Getting your location, please wait</string>


</resources>