<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingTop="@dimen/_20sdp"
    android:paddingHorizontal="@dimen/_40sdp"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/primary"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/welcome_back_login_with_your_data_that_your_entered_during_registration"
            android:textColor="@color/color_text_blue"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:text="@string/email"/>

        <com.dicoding.submissionintermediatedicoding.utils.field.MyCustomEmail
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/secondary_text"
            android:textColor="@color/secondary_blue_border"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:text="@string/password"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxStrokeWidth="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@null"
            app:passwordToggleEnabled="true">
            <com.dicoding.submissionintermediatedicoding.utils.field.MyCustomPassword
                android:paddingBottom="@dimen/_12sdp"
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:textColorHint="@color/secondary_text"
                android:textColor="@color/secondary_blue_border"
                android:textSize="@dimen/_12ssp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/color_text_blue"
            android:text="@string/forgot_your_password"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:backgroundTint="@color/light_blue_900"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_8sdp"/>



    </LinearLayout>

</ScrollView>
