<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storyLayoutRoot"
    app:cardCornerRadius="@dimen/_10sdp"
    android:elevation="4dp"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:transitionName="photo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/contentDescIV" />

        <TextView
            android:id="@+id/tv_storyDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:transitionName="description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/story_image"
            app:layout_constraintTop_toBottomOf="@+id/story_image"
            tools:text="@string/txt_description" />

        <TextView
            android:id="@+id/tv_storyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_9ssp"
            android:transitionName="name"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_storyDesc"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyDesc"
            tools:text="@string/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>