<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txt_image_description"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/txt_image_description" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/text_detail_description"
        tools:text="@string/name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/_1sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>